--- a/src/components/EventDetails/EventDetails.module.css
+++ b/src/components/EventDetails/EventDetails.module.css
@@ -55,6 +55,14 @@
   margin-bottom: 0px;
 }
 
+.bookingLimitText {
+  color: rgb(34, 34, 34);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-bottom: 0px;
+}
+
 .bookingBtn {
   display: flex;
   justify-content: flex-end;
@@ -132,7 +140,7 @@
   margin-bottom: 0px;
 }
 
-.dateTimeText::after {
+.genreText::after {
   content: "|";
   padding: 10px;
 }
